Sat Jan 29 22:16:26 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* array.c (rb_ary_join): [].join.encoding must be US-ASCII.
	  [ruby-list:47790]

Fri Jan 28 12:05:48 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: Add #include<sys/stat.h> when struct stat is
	  tested. Otherwise, incomplete type dereference error will occur.

Fri Jan 28 02:37:18 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* re.c (rb_reg_raise): add GC guard to prevent intermediate
	  variable from GC.

Fri Jan 28 02:35:41 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* hash.c (rb_hash_fetch_m): add GC guard to prevent intermediate
	  variable from GC.

Wed Jan 26 22:57:30 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* class.c (clone_method): add GC guard to prevent intermediate
	  variable from GC. [Bug #4321] [ruby-dev:43107]

Wed Jan 26 22:28:49 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* vm_eval.c (rb_throw_obj): add GC guard to prevent intermediate
	  variable from GC. [Bug #4322] [ruby-dev:43108]

Wed Jan 26 10:36:28 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (=~): documentation fix; the return value is nil when
	  it doesn't match. patched by Andrei Kulakov [ruby-core:34562]

Tue Jan 25 08:28:19 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_resize): get rid of out-of-bound access.

Tue Jan 25 07:00:52 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_string_value_cstr): rb_str_modify can change
	  RSTRING_PTR.

Tue Jan 25 07:48:22 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/test_thread.rb: remove unused variables.

Tue Jan 25 07:45:44 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/test_thread.rb (TestThread#test_condvar_nolock_2): get
	  rid of method redefined.

Tue Jan 25 03:24:28 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_thread.rb: Added various ConditionVariable tests.

Mon Jan 24 21:04:45 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
